# add-final-assignment-2

./: CLAUDE.md  Cargo.toml  README.md
docs/: memo.txt  requirements.md
docs/plans/: mvp_plans.md
docs/plans/done/: mvp_plans.md  task01_project_setup.md
src/: animation.rs  cache.rs  cli.rs  config.rs  error.rs  jma_client.rs  lib.rs  location.rs  main.rs  tui.rs  weather_code.rs
src/tui/: app.rs  demo.rs  format.rs  layout.rs  mod.rs  theme.rs  view.rs
