[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
toml = "1.1.3"
ureq = "3.3.0"

[dev-dependencies]
mockito = "1.7.2"
